--- a/style.css
+++ b/style.css
@@ -77,9 +77,18 @@ body {
     height: 50%;
     position: absolute;
     display: inline;
+    z-index: 37;
+    bottom: 5%;
+    left: 55%;
+}
+
+#container006 img {
+    height: 50%;
+    position: absolute;
+    display: inline;
     z-index: 39;
     bottom: -6.6%;
-    left: 55%;
+    left: 60%;
 }
 
 
